[package]
name = "blockhash"
version = "0.5.0"
edition = "2018"
resolver = "2"
rust-version = "1.70.0"

authors = ["James Mills <james@jaehl.net>"]
description = "A perceptual hashing algorithm for detecting similar images."
keywords = ["blockhash", "fingerprint", "hash", "perceptual"]
categories = ["multimedia::images", "no-std"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/blockhash"
homepage = "https://github.com/jaehl/blockhash"
repository = "https://github.com/jaehl/blockhash"

[dependencies]
image = { version = "0.25", optional = true }

[features]
default = ["std", "image"]
std = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
